@@ -1,3 +1,9 @@
+2002-04-22  Jacob Berkman  <jacob@ximian.com>
+
+	* bonobo/bonobo-window.c:
+	* bonobo/bonobo-selector.c: revert changes again as they break (at
+	least) nautilus
+
 2002-04-22  Murray Cumming  <murrayc@usa.net>
 
 	* bonobo/bonobo-window.c: (bonbo_window_construct) Recommitted,
